--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -19,10 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^1.1.7+2
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  
 
 dev_dependencies:
   flutter_test:
